# TaskExecutionFramework

./: TEF_Light_Reconciliation_Report.md  manual_testing_instructions.md  terminal-scratch.md  terminal-scratch.ps1  terminal-scratch.txt
.claude/: settings.local.json
Prototype/: APPROACH_SUMMARY.md  IMPLEMENTATION_PLAN.md  PHASE_1_VERIFICATION.md  PHASE_3_VERIFICATION.md  agent_communication.py  tef_orchestrator.py
Prototype/agents/: build_observer.md  executor_agent_enhanced.md
Prototype1/: Implementation_plan.md
Specs/: DETAILS_DEMO.md  EXECUTION_FLOW_METAPHORS.md  FRAMEWORK_LIGHT_OVERVIEW.md  FRAMEWORK_OVERVIEW.md  FRAMEWORK_OVERVIEW_INTERACTIVE.html  TECHNICAL_SPECIFICATION.md
TEF_Light/: .gitignore  FEATURE_ROADMAP.md  STRUCTURED_OUTPUT_REFACTOR.md  assessment_instructions.md  claude.md  claude_client.py  models.py  project_plan.json  pyproject.toml  tef_light.py  templates.py  test_task.json
TEF_Light/Specs/: TEF_LIGHT_IMPLEMENTATION.md  snippets.md
TEF_Light/claude_agents/: __init__.py  base.py  pathfinder.py  plan_adapter.py  task_assessor.py  task_executor.py
TEF_Light/instructions/: adaptation_instructions.md  execution_instructions.md  project_context.md
TEF_Light/projects/todo_app/: todo_app.json
TEF_Light/projects/todo_app/prompt-templates/: plan_adaptation.md  task_assessment.md
TEF_Light/prompt-templates/: task_execution.md
TEF_Light/templates/: plan_adaptation.md  task_assessment.md  task_execution.md
TEF_Light/user_intent/: original_plan.json
state/: execution_history.json  observations.json  task_queue.json
(+59 files in other folders)
