[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tef-light"
version = "0.1.0"
description = "Task Execution Framework (Simplified)"
dependencies = [
    "anthropic",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "flake8",
    "pytest"
]